p3/app/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: development-svc
  namespace: argocd
spec:
  selector:
    app.kubernetes.io/name: development
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8888
